--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
       </div>
       <div class="footer__bar">
-       <h4> Thankou and Come Again </h4>
+       <h4> Thankou and Come  </h4>
       </div>
     </footer>
 
